<?xml version="1.0"?>
<package format="2">
  <name>nuturtle_description</name>
  <version>1.0.0</version>
  <description>Contains urdf files and basic debugging, testing, and visualization code for the robots used in ME495</description>
  <maintainer email="edoardorundeddu2021@u.northwestern.edu">Edoardo Rundeddu</maintainer>
  <license>Apache License 2.0</license>
  <author email="edoardorundeddu2021@u.northwestern.edu">Edoardo Rundeddu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
