<?xml version="1.0"?>
<package format="2">
  <name>nuturtle_robot</name>
  <version>1.0.0</version>
  <description>contains code to interact with the turtlebot hardware and run nodes on the turtlebot from a computer</description>
  <maintainer email="edoardorundeddu2021@u.northwestern.edu">Edoardo Rundeddu</maintainer>
  <license>Apache License 2.0</license>
  <author email="edoardorundeddu2021@u.northwestern.edu">Edoardo Rundeddu</author>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/nuturtle_robot</url> -->

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <depend>catch_ros</depend>
  <depend>nuturtlebot</depend>
  <depend>rigid2d</depend>
  <depend>roscpp</depend>
  <depend>rostest</depend>
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>nuturtle_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>tf</exec_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <test_depend>rostest</test_depend>
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <doc_depend>doxygen</doc_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
