<?xml version="1.0"?>
<package format="2">
  <name>rigid2d</name>
  <version>1.0.0</version>
  <description>Functions to perform 2D rigid body transformations</description>
  <maintainer email="edoardorundeddu2021@u.northwestern.edu">Edoardo Rundeddu</maintainer>
  <license>Apache License 2.0</license>
  <author email="edoardorundeddu2021@u.northwestern.edu">Edoardo Rundeddu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>catch_ros</depend>
</package>
