<?xml version="1.0"?>
<package format="2">
  <name>rigid2d</name>
  <version>1.0.0</version>
  <description>Functions to perform 2D rigid body transformations</description>
  <maintainer email="edoardorundeddu2021@u.northwestern.edu">Edoardo Rundeddu</maintainer>
  <license>Apache License 2.0</license>
  <author email="edoardorundeddu2021@u.northwestern.edu">Edoardo Rundeddu</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>catch_ros</depend>
  <depend>joint_state_publisher</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>nuturtle_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
